# reactos

./: .gitignore  CMakeLists.txt  urlmon.cfg  winesync.cfg
BarfDisks/: Build.bat  Build.sh  barfdisks.c  fat32.h  gpt.h  mbr.h  utility.c  utility.h
boot/: Untitled-1.txt  (+1 more)
boot/freeldr/uefi/: CMakeLists.txt  arm.S  freeldr.c  gui.c  machuefi.c  misc.c  stubs.c  uefi.c  uefibus.c  ueficon.c  uefidebug.c  uefidisk.c  uefidisk_new.c  uefidisk_new.txt  uefildr.c  uefimem.c  uefimem_new.c  uefimm.c  uefisetup.c  uefiux.c  uefivid.c  uefivideo.c  utils.c
boot/freeldr/uefi/arch/amd64/: arch.c  misc.S
boot/freeldr/uefi/arch/arm/: entry.c  macharm.c
boot/freeldr/uefi/arch/i386/: arch.c  misc.S  xtra.S
boot/freeldr/uefi/arch/i386/pc/: machpc.c  pcbeep.c  pccons.c  pcdisk.c  pchw.c  pcmem.c  pcrtc.c  pcvesa.c  pcvideo.c  ueficon.c  uefimem.c  uefivideo.c
boot/freeldr/uefi/include/: machuefi.h  uefildr.h
boot/freeldr/uefi/include/efi/: Uefi.h  UefiBaseType.h
dll/directx/: CMakeLists.txt
dll/directx/ddraw/: main.c
dll/directx/wine/: CMakeLists.txt
dll/directx/wine/d2d1/: CMakeLists.txt
dll/directx/wine/d3d10/: effect.c
dll/directx/wine/d3d12/: CMakeLists.txt  d3d12_main.c
dll/directx/wine/d3d12/vkd3d/: CMakeLists.txt
dll/directx/wine/d3d12/vkd3d/include/: CMakeLists.txt  vkd3d.h  vkd3d_utils.h
dll/directx/wine/d3d12/vkd3d/vkd3d/: CMakeLists.txt  vkd3d_private.h  vulkan_procs.h
dll/directx/wine/d3d12/vkd3d/vkd3d-common/: CMakeLists.txt
dll/directx/wine/d3d12/vkd3d/vkd3d-shader/: CMakeLists.txt  hlsl.c  hlsl.h  hlsl.y  hlsl_codegen.c  preproc.h  preproc.l  preproc.y  spirv.c  spirv.h
dll/directx/wine/d3d12/vkd3d/vkd3d-utils/: CMakeLists.txt  vkd3d_utils_main.c
dll/directx/wine/d3d9/: d3d9_private.h  device.c  swapchain.c
dll/directx/wine/ddraw/: ddraw_private.h  main.c
dll/directx/wine/dwrite/: CMakeLists.txt
dll/directx/wine/dxgi/: dxgi_private.h  swapchain.c
dll/directx/wine/vkd3d/: CMakeLists.txt
dll/directx/wine/vkd3d/include/private/: config.h  vkd3d_common.h
dll/directx/wine/vkd3d/libs/: CMakeLists.txt
dll/directx/wine/vkd3d/libs/vkd3d/: CMakeLists.txt  command.c  resource.c  state.c  vkd3d_main.c  vkd3d_private.h
dll/directx/wine/vkd3d/libs/vkd3d-common/: CMakeLists.txt  debug.c
dll/directx/wine/vkd3d/libs/vkd3d-shader/: CMakeLists.txt  d3d_asm.c  d3dbc.c  dxil.c  fx.c  hlsl.c  hlsl.h  hlsl_codegen.c  ir.c  spirv.c  tpf.c  vkd3d_shader_private.h
dll/directx/wine/wined3d/: CMakeLists.txt  adapter_gl.c  adapter_vk.c  context.c  cs.c  device.c  directx.c  shader.c  shader_sm4.c  stateblock.c  swapchain.c  utils.c  wined3d.spec  wined3d_gl.h  wined3d_main.c  wined3d_private.h
dll/win32/ncrypt/: CMakeLists.txt
drivers/base/: CMakeLists.txt
drivers/base/bootvid/: CMakeLists.txt  bootvid.spec  common.c  precomp.h
drivers/base/bootvid/arm64/: arm64.h  bootvid.c
drivers/base/bootvid/framebuf/: bootvid.c
drivers/base/bootvid/i386/pc/: bootvid.c  pc.h  vga.c
drivers/base/bootvid/uefi/: uefi.c  uefi.h
drivers/base/kdcom/: kdcom.c
drivers/base/kdgdb/: kdcom.c
drivers/base/kdvm/: kdvm.c
drivers/base/nmidebug/: nmidebug.c
drivers/bus/acpi_new/: CMakeLists.txt  acpi.rc  main.c  uacpi_layer.c
drivers/network/dd/I210/: CMakeLists.txt  hardware.c  i21x.inf  i21x.rc  i21xhw.h  info.c  interrupt.c  ndis.c  nic.h  send.c
drivers/usb/: CMakeLists.txt
drivers/usb/usbccgp/: descriptor.c  fdo.c  function.c  misc.c  pdo.c  usbccgp.c
drivers/usb/usbd/: usbd.c
drivers/usb/usbehci/: debug.c  roothub.c  usbehci.c
drivers/usb/usbhub/: debug.c  ioctl.c  pnp.c  power.c  usbhub.c
drivers/usb/usbohci/: roothub.c  usbohci.c
drivers/usb/usbport/: debug.c  device.c  endpoint.c  iface.c  ioctl.c  iso.c  pnp.c  power.c  queue.c  roothub.c  trfsplit.c  urb.c  usb2.c  usbport.c
drivers/usb/usbstor/: CMakeLists.txt  descriptor.c  disk.c  error.c  fdo.c  misc.c  pdo.c  queue.c  scsi.c  usbstor.c
drivers/usb/usbstor_new/: descriptor.c  disk.c  error.c  fdo.c  misc.c  pdo.c  queue.c  scsi.c  usbstor.c
drivers/usb/usbuhci/: roothub.c  usbuhci.c
drivers/usb/usbxhci/: CMakeLists.txt  dbg_xhci.h  debug.c  hardware.h  hwhacks.c  pusbxhci.c  roothub.c  usbxhci.c  usbxhci.h  usbxhcip.c  usbxhcip.h  utils.c  xHCINotes
drivers/usb/usbxhci/haicuck/: xhci.cpp  xhci.h  xhci_hardware.h
drivers/usb/usbxhci_new/: CMakeLists.txt  roothub.cpp  usbxhci.cpp  usbxhci.h
drivers/usb/usbxhci_new/xhcilib/: xhci.cpp  xhci.hpp  xhcihardware.hpp
hal/: hal.spec  (+1 more)
hal/hal_new/: CMakeLists.txt  acpi.cmake  apic.cmake  efi.cmake  generic.cmake  halaacpi.cmake  halmacpi.cmake  up.cmake  x86.cmake
hal/hal_new/acpi/: acpi.c  acpidisp.c
hal/hal_new/efi/: clock.c  efi.c  efi.h
hal/hal_new/generic/: halstart.c
hal/hal_new/halx86/apic/: apic.c
hal/hal_new/halx86/x86/: cmos.c  halinit.c  sysinfo.c
hal/hal_new/include/: arch.h  enum.h  hal.h
hal/hal_new/include/x86/: halp.h  halx86.h
hal_new/: CMakeLists.txt  hal.spec
hal_new/architecture/halx86/: reboot.c  x86bios.c
hal_new/core/: halinit.c  kdmisc.c  misc.c
hal_new/include/: hal.h  hali.h
hal_new/ports/: readme.txt
hal_new/resources/: CMakeLists.txt  acpi.cmake  core.cmake  halacpi.rc  halmacpi.rc  i386.cmake  smp.cmake
hal_new/smp/: irql.c  manage.c
sdk/lib/drivers/displib/: CMakeLists.txt  disp_win8.c  displib.c  displib_manage.c  pdisplib.h
sdk/lib/drivers/rdbsslib/: CMakeLists.txt
sdk/lib/drivers/rxce/: CMakeLists.txt
win32ss/drivers/displays/xboxbuf/: CMakeLists.txt  dd.c  ddenable.c  enable.c  palette.c  pointer.c  screen.c  surface.c  xboxbuf.h  xboxbuf.rc
win32ss/drivers/displays/xboxbuf/nv2a/: nv2a.c  nv2a.h
win32ss/drivers/miniport/xboxvmp/: CMakeLists.txt  nv2a.c  nv2a_temp.h  xboxi2c.c  xboxvmp.c  xboxvmp.h  xboxvmp_reg.inf
win32ss/drivers/miniport/xboxvmp/encoder/: conexant.c  encoder.c  encoder.h
win32ss_vista/drivers/dxgkrnl/: CMakeLists.txt  dxgkinterface.cpp  entry.c
win32ss_vista/drivers/dxgkrnl/include/: dxgkrnl.h
win32ss_vista/drivers/dxgkrnl/miniport/: miniport.cpp
win32ss_vista/drivers/dxgkrnl/vidpnss/: vidpninterface.cpp  vidpntopology.cpp
(+789 files in other folders)
