
add_subdirectory(beep)
add_subdirectory(bootvid)
add_subdirectory(condrv)

if(_WINKD_)
    if(GDB)
        add_subdirectory(kdgdb)
    else()
        add_subdirectory(kdcom)
        if(NOT ARCH STREQUAL "arm")
        if(NOT ARCH STREQUAL "arm64")
            add_subdirectory(kdvm)
        endif()
        endif()
    endif()
else()
    add_subdirectory(kdrosdbg)
endif()

if(NOT ARCH STREQUAL "arm")
if(NOT ARCH STREQUAL "arm64")
add_subdirectory(nmidebug)
endif()
endif()
add_subdirectory(null)
